--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
+title: STM32 MIDI Brain
+description: Open source firmware and schematic to build a MIDI controller
